feat: added multiple functionality for the travel log feature